--- a/moverspackers/templates/request_quote.html
+++ b/moverspackers/templates/request_quote.html
@@ -84,7 +84,7 @@
                         </div>
                     </div>
             </div>
-                <input type="submit" value="Sumit" class="m-2 px-3 btn btn-primary">
+                <input type="submit" value="Submit" class="m-2 px-3 btn btn-primary">
             </form>
         </div>
     </div>
