changes in views and header page

--- a/moverspackers/templates/header.html
+++ b/moverspackers/templates/header.html
@@ -15,7 +15,7 @@
 <title>Movers & Packers</title>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">Movers And packers Project</a>
+    <a class="navbar-brand" href="#">Movers And packers pvt Ltd</a>
   
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
