--- a/moverspackers/templates/edit_service.html
+++ b/moverspackers/templates/edit_service.html
@@ -42,7 +42,7 @@
 
 
             </div>
-                <input type="submit" value="Sumit" class="m-2 px-3 btn btn-primary">
+                <input type="submit" value="Submit" class="m-2 px-3 btn btn-primary">
             </form>
         </div>
     </div>
