--- a/moverspackers/templates/index.html
+++ b/moverspackers/templates/index.html
@@ -12,10 +12,13 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{% static 'images/labours2.jpg' %}" alt="Los Angeles" width="100%" height="500">
+            <img src="{% static 'images/index.jpg' %}" alt="Los Angeles" width="100%" height="500">
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/laboursblue.png' %}" alt="chicago" width="100%" height="500">
+            <img src="{% static 'images/laboursblue.jpg' %}" alt="chicago" width="100%" height="500">
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'images/labours2.jpg' %}" alt="chicago" width="100%" height="500">
         </div>
     </div>
     
