--- a/moverspackers/templates/request_quote.html
+++ b/moverspackers/templates/request_quote.html
@@ -2,7 +2,7 @@
 {% include 'header.html' %}
 
 <header class="container-fluid" style="border: 1px solid yellow;">
-    <img src="{% static 'images/ad4.jpg' %}" width="100%" height="500" class="img-responsive">
+    <img src="{% static 'images/request.jpg' %}" width="100%" height="500" class="img-responsive">
 
 </header>
 
