--- a/moverspackers/templates/services.html
+++ b/moverspackers/templates/services.html
@@ -2,7 +2,7 @@
 {% include 'header.html' %}
 
 <header class="container-fluid" style="border: 1px solid yellow;">
-    <img src="{% static 'images/carpacking.jpg' %}" width="100%" height="500" class="img-responsive">
+    <img src="{% static 'images/services.jpg' %}" width="100%" height="500" class="img-responsive">
 
 </header>
 
@@ -22,7 +22,7 @@
 
         {% for i in services %}
         <div class="col-sm-4 p-2 mb-5">
-            <div class="card" style="width: 300px;height: 350px;">
+            <div class="card" style="width: 300px;height: 550px;">
                 <img class="card-img-top" src="{{i.image.url}}" style="width: 100%;height:200px">
                 <h4 class="card-title text-center">{{i.title}}</h4>
                 <p class="card-text text-justify px-3">{{i.description}}</p>
